# qr-backend

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  init.sh  logfile
.github/workflows/: ci.yaml  release.yml
.sqlx/: query-066a7125b3086db2ba60d2803bdc52b5175f4fb8a610ae095cf52a35b7b3ca3d.json  query-2064e6a8b47438644edbbe75ea7b0c9000d92480ef3822fe64f2c4083270c33a.json  query-41ebfcad39c07a0a77929bb8b396a9574973cf1191d763ed87a35d6660f0a711.json  query-49ad5fc2166cc69c66d377b6575cf8bc3f7391e52f76707f0b008e3fb772ef1b.json  query-52cc6418781331b6be983fca62571208d433d8a2601f398e7c17ef279e7e20b3.json  query-56ab64983361bee9d614a685d05b46a2461e8054d52fde3f8c00045442ea16f5.json  query-65a57cb33f738c85e308f46dbcc6d024b7d72056d06ac2754d3ab8e38a815936.json  query-6afcd5ff97077cac8a629ed4023d03119c053e9fa30d36d79f8ccfb36c48b4bd.json  query-6bf5f59eeccfb4e9499fc936c1f8c9bedea961b299e3376f2adc0f9e7d88b28a.json  query-81cc6df422617795b0a038f611d8d3a0b2b4450dd0e7904e51f24d9f8321fda3.json  query-8c139de4e032ae3b0bb00d02c66cf87c716822882a148c6dd3db417b95457f63.json  query-8f13af755be58f3c6a27426b282371514fe1a637d1135ec2aff624b54061c4c1.json  query-91b25f39d2e641413455067202578c637df615b85004243249d30e418bd3303a.json  query-99b0044202570995628a6b4d2ebb5336eb51c06d242eece58fff19f664afe8a7.json  query-9d1bfda7da42acc1c9d5b1e275011007508a30762079ddebbf5470b3e35c3f98.json  query-a189f8a8d49c2a4d0fe52eea30278d12f7511a7966b3c12d90d2e5429c4b0c01.json  query-a23f5f7a09a8342a88fc6d75721d8dedc3ab2e3a5b619afb0b7c6fc5542c76d6.json  query-a42b78be9b97caf4a4dffac1596c49a35f4ffba63d749b45c1fc71a35677a837.json  query-ad7085a7dbe32202cdcd68836d093783ad5f4a22ce23d9697b59afa20a3f2b69.json  query-b2919f5716bf8be30ba1cd1446ecff8549f8afebdd29c05df92b007882976d05.json  query-b3a35c5cc31fde52a03f31115eb3bba3b8334564aaee9e2b88bf2f85a992e10c.json  query-b6d34cd93de1acae98292926ec1d5331e0749d8942a7f3d50e6e1cc2cbb2b465.json  query-b96f0368fef06567851d189f9b85e13e45dc13c821befc81433e8fd85f8255ff.json  query-ba8020bc2a157e8ff6e9b026707f320e9a88cec8be67350c0f72ec9011aa9436.json  query-bec1d73bdd7dd9ce96749b7f40c716f54c328f9715aea60d0d03cb499bca40fa.json  query-c4805bfdcd72a8771090beb4bcc9097fda52f2fce1779a94e62aa7d34b4ec53d.json  query-d2f7a086175c55e12aa9f112d92d89173cfe4418804bc0f4e7e1da41bbe540c1.json  query-d38b094f348e33367ebac1255a7b90e3d03b3249ec2bd19ffda9c27773126517.json  query-d5eb200e3a17e2fb2f45341c083c97445d2298e1f953510925cbba71a9afadf1.json  query-d641bee6ce8fad269413c845633aea62e7a14108eb792ec46440998bb78c5e4b.json  query-dcb9054dd4e77a0ca7b39075447ec94c7cb81d229ad870e70a78b952d3a69e24.json  query-e3257eb5fe0cdf422a061dbd894d23bb1ec17933e6332739b74be22afbeaed1f.json  query-e676086734f9d56da720f47cf3ae0769b6eae95eddf0927d95dd5176ab60d406.json  query-eeb30f843acc30ef508042e784b2b8ec35ce4d7f377ea490f0a0725945f3efed.json  query-f43557feffba7dc2af27cf4728239076402ed5ce6235e73300b065ab90272cba.json  query-fbaf46a14dc293fb2fd0a814f9286b6f590dc0ee22639028a3e245bbbe28bab1.json  query-fd31e7123d48f3b6aa1cf5b409d47c26f80ed00cf363d4771f0c45a1c9d0fc09.json
caddy/: Caddyfile
caddy/config/caddy/: autosave.json
caddy/data/caddy/acme/acme-staging-v02.api.letsencrypt.org-directory/users/jsys@sohosai.com/: jsys.json  jsys.key
caddy/data/caddy/acme/acme-v02.api.letsencrypt.org-directory/users/jsys@sohosai.com/: jsys.json  jsys.key
caddy/data/caddy/acme/acme.zerossl.com-v2-dv90/users/jsys@sohosai.com/: jsys.json  jsys.key
migrations/: 20230708195131_init.sql  20230813182916_spot.sql  20230815060025_lending.sql  20230816041320_container.sql  20231026141120_passtoken.sql
qr-api-server/: Cargo.toml
qr-api-server/src/: app.rs  filter.rs  lib.rs  main.rs
qr-api-server/src/app/: authentication.rs
qr-api-server/src/filter/: authentication.rs
qr-api-server/src/filter/authentication/: bearer.rs  claim.rs  key_store.rs
qr-api-server/src/handler/: health.rs  me.rs  signup.rs
qr-context/: Cargo.toml
qr-context/src/: authentication_context.rs  user_repository.rs
qr-database/: Cargo.toml
qr-database/migrations/: 20230313102158_init.sql
qr-database/src/: lib.rs  model.rs
qr-database/src/command/: insert_user.rs
qr-database/src/model/: container.rs  equipment.rs  object.rs  place.rs  qrcode.rs  user.rs
qr-domain/: Cargo.toml
qr-domain/src/: email.rs  role.rs  string.rs
qr-run-migrations/: Cargo.toml
qr-use-case/: Cargo.toml
qr-use-case/src/: get_login_user.rs  signup.rs
src/: app.rs  authentication.rs  certification.rs  database.rs  error_handling.rs  lib.rs  main.rs  search_engine.rs
src/app/: authentication.rs  certification.rs  container.rs  equipment.rs  fixtures.rs  lending.rs  spot.rs
src/database/: delete_equipment.rs  delete_fixtures.rs  delete_spot.rs  get_fixtures_list.rs  get_lending_list.rs  get_one_fixtures.rs  get_one_lending.rs  get_one_spot.rs  get_spot_list.rs  insert_container.rs  insert_equipment.rs  insert_fixtures.rs  insert_lending.rs  insert_spot.rs  returned_lending.rs  update_fixtures.rs  update_lending.rs  update_spot.rs
