[package]
name = "qr-backend"
authors = ["momeemt <me@momee.mt>", "puripuri2100 <puripuri2100@gmail.com>"]
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["json", "headers"] }
chrono = { version = "0.4.26", features = ["serde"] }
meilisearch-sdk = "0.24.2"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
sqlx = { version = "0.7.0", features = [ "runtime-tokio-rustls", "json", "chrono", "uuid", "postgres", "macros" ] }
structopt = "0.3.26"
thiserror = "1.0.41"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
unicode-normalization = "0.1.22"
url = "2.4.0"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
