[package]
name = "qr-api-server"
authors = ["momeemt <me@momee.mt>"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
warp = "0.3"
structopt = "0.3"