[package]
name = "qr-api-server"
authors = ["momeemt <me@momee.mt>"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
warp = { version = "0.3.3", default-features = false }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.16"
futures = "0.3.26"
anyhow = "1.0.69"
structopt = "0.3.26"
async-trait = "0.1.64"
thiserror = "1.0.38"
chrono = "0.4.23"
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["postgres", "runtime-tokio-rustls"] }
jsonwebtoken = "8.2.0"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
url = "2.3.1"
qr-domain = { path = "../qr-domain" }
qr-database = { path = "../qr-database" }
qr-context = { path = "../qr-context" }
qr-use-case = { path = "../qr-use-case" }
serde_json = "1.0.93"
