[package]
name = "qr-context"
version = "0.1.0"
authors = ["momeemt <me@momee.mt>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = "0.4.23"
qr-domain = { path = "../qr-domain" }
