[package]
name = "qr-database"
version = "0.0.1"
authors = ["momeemt <me@momee.mt>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
uuid = "1.3.0"
futures = "0.3"
bitflags = "1"
serde_json = "1"

[dependencies.sqlx]
version = "0.6"
features = [
  "bit-vec",
  "chrono",
  "json",
  "macros",
  "offline",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
]
