[package]
name = "qr-run-migrations"
version = "0.0.1"
authors = ["momeemt <me@momee.mt>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
qr-database = { path = "../qr-database" }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
