[package]
name = "qr-use-case"
version = "0.1.0"
authors = ["momeemt <me@momee.mt>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
tracing = "0.1.37"
tracing-futures = "0.2.5"
qr-domain = { path = "../qr-domain" }
qr-context = { path = "../qr-context" }
